Summary of changes between versions 1.0.0 and 1.0.1
---------------------------------------------------



Summary of changes between versions 0.9.5 and 1.0.0
---------------------------------------------------

 - Fixed sg_tablesize in qla2x00t to be per target card, not global

 - Updated to work on 2.6.25.x

 - Updated to work on 2.6.24.x

 - Fixed possible crash if tgt module rmmod'ed under load

 - Fixed incorrect residual on internal BUSY replies

 - Updated to work on 2.6.23.x

 - Fixes a race, when an event comes on the driver unload, so DPC thread
   will try to use already half destroyed data. 

 - Fixed problem with SNS, not advertising target mode.

 - Support for per-target default security groups added.

 - Updated to work on 2.6.22.x kernels.

 - Updated to work on 2.6.21.x kernels.

 - Updated to work on 2.6.20.x kernels.

 - Updated to work with SCST 0.9.6.

 - /proc support routines changed to work with seq_file interface.

 - Cleanups and minor bug fixes.


Summary of changes between versions 0.9.3.8 and 0.9.5
-----------------------------------------------------

 - Ported to 2.6.17.x and 2.6.18.

 - Problem with not found WWN on the first login attempt fixed.
 
 - Updated for the latest SCST interfaces changes.

 - Cleanups and minor bug fixes.


Summary of changes between versions 0.9.3.8 and 0.9.3.9
-------------------------------------------------------
Patch vs: qla2xxx v8.01.03-k (in kernels 2.6.15.x+, including 2.6.16-prex)

 - Fixed problem when "out-of-order frames rassembly" bit was wrongly set,
   which lead to only 1Gbps speed of 23xx cards.

 - Removed all code that deals with "use_sg == 0" data, since staring
   from SCST 0.9.5 commands data are always in SG-vector. 

 - Fixed hungup on the module unload.

 - Minor cleanups and fixes


Summary of changes between versions 0.9.3.7 and 0.9.3.8
-------------------------------------------------------
Patch vs: qla2xxx v8.01.03-k (in kernels 2.6.15.x+, including 2.6.16-prex)
